--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -9,16 +9,34 @@
     <string name="downloads">下载</string>
     <string name="log">日志</string>
     <string name="settings">设置</string>
+    <string name="status">状态</string>
+    <string name="install">安装</string>
 
-    <!--Magisk Fragment-->
+    <!--Status Fragment-->
     <string name="magisk_version">已安装 Magisk v%1$s</string>
     <string name="magisk_version_error">你是否已安装 Magisk？</string>
 
+    <string name="checking_for_updates">正在检查更新…</string>
     <string name="magisk_update_available">Magisk 可更新到 v%1$.1f！</string>
-    <string name="cannot_check_updates">无法检查更新</string>
+    <string name="cannot_check_updates">无法检查更新，没有网络连接？</string>
     <string name="up_to_date">已安装最新版本的 %1$s</string>
+    <string name="root_error">已 ROOT 但没有 ROOT 权限，未授予权限？</string>
+    <string name="not_rooted">未 ROOT</string>
+    <string name="proper_root">已正确 ROOT</string>
+    <string name="checking_safetyNet_status">正在检查 SafetyNet 状态…</string>
+    <string name="safetyNet_error">无法检查 SafetyNet，没有网络连接？</string>
+    <string name="safetyNet_fail">SafetyNet 失败：CTS 配置文件不匹配</string>
+    <string name="safetyNet_pass">SafetyNet 已通过</string>
+    <string name="root_info_warning">功能严重受限</string>
 
-    <!--Root Fragment-->
+    <!--Install Fragment-->
+    <string name="auto_detect">"（自动） %1$s"</string>
+    <string name="boot_image_title">Boot 镜像位置</string>
+    <string name="detect_button">检测</string>
+    <string name="advanced_settings_title">高级设置</string>
+    <string name="keep_force_encryption">保持强制加密</string>
+    <string name="keep_dm_verity">保持 dm-verity</string>
+    <string name="install_magisk_title">安装 Magisk 版本：v%1$.1f</string>
 
     <!--Module Fragment-->
     <string name="no_info_provided">（未提供信息）</string>
@@ -51,7 +69,7 @@
     <string name="app_developers">主要开发者</string>
     <string name="app_developers_"><![CDATA[此应用由 <a href="https://github.com/topjohnwu">topjohnwu</a> 与 <a href="https://github.com/d8ahazard">Digitalhigh</a> 和 <a href="https://github.com/dvdandroid">Dvdandroid</a> 合作开发。]]></string>
     <string name="app_changelog">应用更新日志</string>
-    <string name="translators"/>
+    <string name="translators" />
     <string name="app_version">应用版本</string>
     <string name="app_source_code">源代码</string>
     <string name="donation">捐赠</string>
@@ -64,6 +82,7 @@
     <string name="repo_install_title">安装 %1$s</string>
     <string name="repo_install_msg">你想要安装 %1$s 吗？</string>
     <string name="download_install">下载并安装</string>
+    <string name="goto_install">前往“安装”界面</string>
     <string name="download_file_error">下载文件时出错</string>
     <string name="install_error">安装出错！</string>
     <string name="manual_install_1">Zip 文件已保存至 %1$s</string>
@@ -72,12 +91,14 @@
     <string name="reboot_title">安装成功！</string>
     <string name="reboot_msg">你想要立即重启吗？</string>
     <string name="reboot">重启</string>
+    <string name="copying_msg">正在复制 zip 到临时目录</string>
     <string name="zip_install_progress_title">正在安装</string>
     <string name="zip_install_unzip_zip_msg">正在解压 zip 文件 …</string>
     <string name="zip_install_process_zip_msg">正在处理 zip 文件 …</string>
     <string name="zip_install_progress_msg">"正在安装 %1$s …"</string>
     <string name="no_magisk_title">未安装 Magisk！</string>
     <string name="no_magisk_msg">你想要下载并安装 Magisk 吗？</string>
+    <string name="downloading_toast">正在下载 %1$s</string>
 
     <!--URL Templates-->
 
