--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -47,7 +47,7 @@
     <string name="app_developers">Principais desenvolvedores</string>
     <string name="app_developers_"><![CDATA[App criado por <a href="https://github.com/topjohnwu">topjohnwu</a> em colaboração com <a href="https://github.com/d8ahazard">Digitalhigh</a> e <a href="https://github.com/dvdandroid">Dvdandroid</a>.]]></string>
     <string name="app_changelog">Registro de Mudanças do App</string>
-    <string name="translators" />
+    <string name="translators">Killer7Mod</string>
     <string name="app_version">Versão do App</string>
     <string name="app_source_code">Código fonte</string>
     <string name="donation">Doação</string>
